--- a/project.html
+++ b/project.html
@@ -45,12 +45,6 @@
             Source
             Code</a>
         </div>
-        <!-- <div style="padding-top: 1rem;">
-
-        </div>
-        <div style="padding-top: 3rem;">
-
-        </div> -->
       </li>
     </div>
     <div class="container container-center project-ow">
@@ -70,13 +64,6 @@
             href="https://github.com/Aritra-art/Music-Recommender" target="_blank">Github
             Source Code</a>
         </div>
-        <!-- <div style="padding-top: 0.5rem;">
-         
-        </div>
-        <div style="padding-top: 2rem;">
-        
-        </div> -->
-
       </li>
     </div>
     <div class="container container-center project-w">
@@ -86,12 +73,13 @@
         <p>Made a country code web-app that helps to find the code of the entered country. | TechStack used:
           <strong style="color: var(--primary-colors);">Reactjs</strong>|
         </p>
-        <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://csb-k4yv3.netlify.app/" target="_blank">Find
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://csb-k4yv3.netlify.app/"
+            target="_blank">Find
             Code</a>
-        </div>
-        <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/Code-O-Country" target="_blank">Github
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/Code-O-Country"
+            target="_blank">Github
             Source
             Code</a>
         </div>
@@ -104,14 +92,15 @@
         <p>Made a Translator web-app that assists English to the Pirate language |TechStack :
           <strong style="color: var(--primary-colors);">HTML5 CSS3 JS</strong>|
         </p>
-        <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://pirateassistant.netlify.app/" target="_blank">Get Assistant</a>
-        </div>
-        <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/PirateAssistant" target="_blank">Github
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
+        ">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://pirateassistant.netlify.app/"
+            target="_blank">Get Assistant</a>
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/PirateAssistant"
+            target="_blank">Github
             Source Code</a>
         </div>
-
       </li>
     </div>
     <div class="container container-center project-w">
@@ -121,12 +110,14 @@
         <p>Made a Translator web-app that converts English to the Banana language | TechStack used:
           <strong style="color: var(--primary-colors);">HTML5 CSS3 JS</strong>|
         </p>
-        <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://minions-language-translate.netlify.app/" target="_blank">Translate
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
+        ">
+          <a class="link primary-link" style="margin-right: 1rem;"
+            href="https://minions-language-translate.netlify.app/" target="_blank">Translate
             Now</a>
-        </div>
-        <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/TalkBanana" target="_blank">Github Source
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/TalkBanana"
+            target="_blank">Github Source
             Code</a>
         </div>
       </li>
@@ -138,7 +129,7 @@
         <p>Adding Blogs to Portfolio | TechStack used:
           <strong style="color: var(--primary-colors);">HTML5 CSS3</strong>|
         </p>
-        <div style="padding-top: 0.5rem;">
+        <div style="margin: 2rem 0rem;">
           <a class="link primary-link" href="./blogs.html" target="_blank">Read Now</a>
         </div>
       </li>
@@ -150,11 +141,13 @@
         <p>This is my Portfolio which showcases all my Projects and related stuffs | TechStack used:
           <strong style="color: var(--primary-colors);">HTML5 CSS3</strong>|
         </p>
-        <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://aritraportfolio.netlify.app/" target="_blank">Check Now</a>
-        </div>
-        <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/Portfolio" target="_blank">Github Source
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
+        ">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://aritraportfolio.netlify.app/"
+            target="_blank">Check Now</a>
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/Portfolio"
+            target="_blank">Github Source
             Code</a>
         </div>
       </li>
@@ -169,36 +162,39 @@
           | TechStack used:
           <strong style="color: var(--primary-colors);">HTML5 CSS3 JS </strong>|
         </p>
-        <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://teditor.netlify.app/" target="_blank">Live Project</a>
-        </div>
-        <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/TextEditor" target="_blank">Github Source
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
+        "> <a class="link primary-link" style="margin-right: 1rem;" href="https://teditor.netlify.app/"
+            target="_blank">Live Project</a>
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/TextEditor"
+            target="_blank">Github Source
             Code</a>
         </div>
         <p>markOne repo added to Github
           | TechStack used:
           <strong style="color: var(--primary-colors);">JavaScript </strong>|
         </p>
-        <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/Quiz?embed=1&output=1"
-            target="_blank">Live Project</a>
-        </div>
-        <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/quiz" target="_blank">Github Source
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
+        ">
+          <a class="link primary-link" style="margin-right: 1rem;"
+            href="https://replit.com/@AritraChowdhury/Quiz?embed=1&output=1" target="_blank">Live Project</a>
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/quiz"
+            target="_blank">Github Source
             Code</a>
         </div>
         <p>markTwo repo added to Github
           | TechStack used:
           <strong style="color: var(--primary-colors);">JavaScript </strong>|
         </p>
-        <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/Kaun-Banega-Crorepati?embed=1&output=1"
-            target="_blank">Live Project</a>
-        </div>
-        <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/Kaun-Banega-Crorepati"
-            target="_blank">Github Source
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
+        ">
+          <a class="link primary-link" style="margin-right: 1rem;"
+            href="https://replit.com/@AritraChowdhury/Kaun-Banega-Crorepati?embed=1&output=1" target="_blank">Live
+            Project</a>
+          <a class="link secondary-link" style="margin-left: 1rem;"
+            href="https://github.com/Aritra-art/Kaun-Banega-Crorepati" target="_blank">Github Source
             Code</a>
         </div>
       </li>
@@ -212,13 +208,13 @@
           TechStack used:
           <strong style="color: var(--primary-colors);">JavaScript</strong>
         </p>
-        <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/Kaun-Banega-Crorepati?embed=1&output=1"
-            target="_blank">Khel Shuru Kartehe</a>
-        </div>
-        <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/Kaun-Banega-Crorepati"
-            target="_blank">Github Source
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;">
+          <a class="link primary-link" style="margin-right: 1rem;"
+            href="https://replit.com/@AritraChowdhury/Kaun-Banega-Crorepati?embed=1&output=1" target="_blank">Khel Shuru
+            Kartehe</a>
+          <a class="link secondary-link" style="margin-left: 1rem;"
+            href="https://github.com/Aritra-art/Kaun-Banega-Crorepati" target="_blank">Github Source
             Code</a>
         </div>
       </li>
@@ -231,12 +227,13 @@
         <p>This is a quiz based on DO YOU KNOW ARITRA ??. TechStack used:
           <strong style="color: var(--primary-colors);">JavaScript</strong>
         </p>
-        <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/Quiz?embed=1&output=1"
-            target="_blank">Play It Now</a>
-        </div>
-        <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/quiz" target="_blank">Github Source
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
+        ">
+          <a class="link primary-link" style="margin-right: 1rem;"
+            href="https://replit.com/@AritraChowdhury/Quiz?embed=1&output=1" target="_blank">Play It Now</a>
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/quiz"
+            target="_blank">Github Source
             Code</a>
         </div>
       </li>
@@ -248,16 +245,14 @@
         <p>This is a quiz based on Java Programming language. TechStack used:
           <strong style="color: var(--primary-colors);">JavaScript</strong>
         </p>
-        <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://replit.com/@AritraChowdhury/assignmentOne?embed=1&output=1"
-            target="_blank">Play It
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;"><a class="link primary-link" style="margin-right: 1rem;"
+            href="https://replit.com/@AritraChowdhury/assignmentOne?embed=1&output=1" target="_blank">Play It
             Now</a>
-        </div>
-        <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/QuizMania" target="_blank">Github Source
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/QuizMania"
+            target="_blank">Github Source
             Code</a>
         </div>
-
       </li>
     </div>
     <div class="container container-center project-ow">
@@ -268,14 +263,14 @@
           holiday. TechStack used:
           <strong style="color: var(--primary-colors);">HTML5, CSS3 JavaScript</strong>
         </p>
-        <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://rajtour.netlify.app/#" target="_blank">Visit us</a>
-        </div>
-        <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/Skytours" target="_blank">Github Source
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://rajtour.netlify.app/#"
+            target="_blank">Visit us</a>
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/Skytours"
+            target="_blank">Github Source
             Code</a>
         </div>
-
       </li>
     </div>
     <div class="container container-center project-w">
@@ -286,14 +281,14 @@
           Price predictor feature. TechStack used:
           <strong style="color: var(--primary-colors);">React-Native Machine Learning HTML5 CSS3 JavaScript</strong>
         </p>
-        <div style="padding-top: 0.5rem;">
-          <a class="link primary-link" href="https://www.youtube.com/watch?v=bGlhLiT5fBY" target="_blank">Visit us</a>
-        </div>
-        <div style="padding-top: 2rem;">
-          <a class="link secondary-link" href="https://github.com/Aritra-art/Authenticate-Shopee" target="_blank">Github
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://www.youtube.com/watch?v=bGlhLiT5fBY"
+            target="_blank">Visit us</a>
+          <a class="link secondary-link" style="margin-left: 1rem;"
+            href="https://github.com/Aritra-art/Authenticate-Shopee" target="_blank">Github
             Source Code</a>
         </div>
-
       </li>
     </div>
   </ul>
