--- a/project.html
+++ b/project.html
@@ -334,6 +334,11 @@
       </li>
     </div>
   </ul>
+  <div style="display: flex;  align-items: center; justify-content: center;"> <a class="link secondary-link"
+      href="./OtherProjects.html" target="_blank">Other
+      Projects</a>
+  </div>
+
   <footer>
     <div class="footer">
       <p class="footer-header">Connect to me</p>
