--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     </div>
   </header>
   <div class="project-ow container container-center">
-    <p>
+    <p style="letter-spacing: 0.1rem;">
       Hello Everyone, My name is Aritra Chowdhury. I am currently pursuing Btech in Computer Science and Engineering. I
       am currently in 3rd Year of my college. I live in Kanchrapara. I have done my schooling from Julien Day School,
       Kalyani. From the childhood days I have a keen interest in programming language Java. I have done and currently
