--- a/OtherProjects.html
+++ b/OtherProjects.html
@@ -5,11 +5,42 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Other Projects</title>
+  <link rel="stylesheet" href="/style.css">
+  <title>Other Projects | AdarshBalak</title>
 </head>
 
 <body>
-  <h2>Other Projects</h2>
+  <nav class="navigation container">
+
+    <div class="nav-brand">IAmDeveloper | Other Projects</div>
+    <ul class="non-bullet nav-pills">
+      <li class="list-item-inline"><a class="link " href="/">Home</a></li>
+      <li class="list-item-inline"><a class="link link-active" href="/project.html">Projects</a></li>
+      <li class="list-item-inline"><a class="link" href="/blogs.html">Blogs</a></li>
+      <li class="list-item-inline"><a class="link" href="/about.html">About</a></li>
+    </ul>
+  </nav>
+  <div class="container hero">
+    <img class="hero-img" src="/images/undraw_growth_curve_re_t5s7.svg" alt="Img link broken">
+    <h1 class="hero-heading" style="padding-left: 2rem;">Other <span class="heading-inverted">Projects</span></h1>
+  </div>
+  </header>
+
+
+  <footer>
+    <div class="footer">
+      <p class="footer-header">Connect to me</p>
+      <ul class="non-bullet">
+        <li class="list-item-inline"><a class="link" href="https://github.com/Aritra-art">GitHub</a></li>
+        <li class="list-item-inline"><a class="link" href="https://www.facebook.com/aritra.chowdhury.549">Facebook</a>
+        </li>
+        <li class="list-item-inline"><a class="link"
+            href="https://www.linkedin.com/in/aritra-chowdhury-b95a66227/">Linkedin</a></li>
+        <li class="list-item-inline"><a class="link" href="https://t.me/Aritra_chowdhury">Telegram</a></li>
+      </ul>
+    </div>
+  </footer>
+
 </body>
 
 </html>
