--- a/project.html
+++ b/project.html
@@ -28,6 +28,42 @@
   <ul class="non-bullet">
     <div class="container container-center project-w">
       <li>
+        <h2>Wrote 2 Blogs ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markFifteen</span>
+        </h2>
+        <small>15th February, 2021</small>
+        <p>Wrote Blogs sbout Technology, Web Development, Programming concepts and lot more intresting stuffs.
+        </p>
+        <div style="display: flex; flex-direction: row; align-items:left; justify-content: left;
+        ">
+          <a class="link primary-link" style="margin-right: 1rem;" href="./blogs.html" target="_blank">Check My
+            Blogs</a>
+
+        </div>
+      </li>
+    </div>
+    <div class="container container-center project-ow">
+      <li>
+        <h2>Profit or Loss Calculator ~ <span
+            style="font-size: 16px; font-style: italic; color: #374151;">markFourteen</span>
+        </h2>
+        <small>10th February, 2021</small>
+        <p>A web-app which tells how much profit or loss he/she is making on a stock
+          |TechStack :
+          <strong style="color: var(--primary-colors);">HTML5 CSS3 JS</strong>|
+        </p>
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
+        ">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://pricecalculatestock.netlify.app/"
+            target="_blank">Check Now</a>
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/StockPrice"
+            target="_blank">Github
+            Source Code</a>
+        </div>
+      </li>
+    </div>
+    <div class="container container-center project-w">
+      <li>
         <h2>Do you know Triangles ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markTwelve</span>
         </h2>
         <small>4th February, 2021</small>
