--- a/project.html
+++ b/project.html
@@ -26,7 +26,7 @@
   </div>
   </header>
   <ul class="non-bullet">
-    <div class="container container-center project-w">
+    <div class="container container-center project-ow">
       <li>
         <h2>Wrote 2 Blogs ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markFifteen</span>
         </h2>
@@ -41,7 +41,7 @@
         </div>
       </li>
     </div>
-    <div class="container container-center project-ow">
+    <div class="container container-center project-w">
       <li>
         <h2>Profit or Loss Calculator ~ <span
             style="font-size: 16px; font-style: italic; color: #374151;">markFourteen</span>
@@ -58,6 +58,28 @@
             target="_blank">Check Now</a>
           <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/StockPrice"
             target="_blank">Github
+            Source Code</a>
+        </div>
+      </li>
+    </div>
+    <div class="container container-center project-ow">
+      <li>
+        <h2>Is Your Birthday Palindrome ? ~ <span
+            style="font-size: 16px; font-style: italic; color: #374151;">markThirteen</span>
+        </h2>
+        <small>6th February, 2021</small>
+        <p>A website which tells whether your birthday is Palindrome or not. If it is not Palindrome it also shows the
+          nearest palindrome date.
+          |TechStack :
+          <strong style="color: var(--primary-colors);">HTML5 CSS3 JS</strong>|
+        </p>
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
+        ">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://palindrome-birth-checker.netlify.app/"
+            target="_blank">Check Now</a>
+          <a class="link secondary-link" style="margin-left: 1rem;"
+            href="https://github.com/Aritra-art/PalindromeBirthday" target="_blank">Github
             Source Code</a>
         </div>
       </li>
