--- a/project.html
+++ b/project.html
@@ -264,10 +264,10 @@
         </p>
         <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
         margin: 2rem 0rem;
-        "> <a class="link primary-link" style="margin-right: 1rem;" href="https://teditor.netlify.app/"
+        "> <a class="link primary-link" style="margin-right: 1rem;" href="https://simple-text-editor-five.vercel.app/"
             target="_blank">Live Project</a>
-          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/TextEditor"
-            target="_blank">Github Source
+          <a class="link secondary-link" style="margin-left: 1rem;"
+            href="https://github.com/Aritra-art/Simple-Text-Editor" target="_blank">Github Source
             Code</a>
         </div>
         <p>markOne repo added to Github
