--- a/blogs.html
+++ b/blogs.html
@@ -27,6 +27,20 @@
     </div>
   </header>
   <ul class="non-bullet">
+    <div class="container container-center project-w">
+      <li>
+        <h2>Introduction to HTTP Requests ~ <span
+            style="font-size: 16px; font-style: italic; color: #374151;">markFifteen</span></h2>
+        <small>2nd December, 2020</small>
+        <p>A blog very close to my Heart. It showcases my journey on falling love with a programming langiage java.
+        </p>
+        <div style="padding-top: 2rem;">
+          <a class="link secondary-link"
+            href="https://aritra2001.hashnode.dev/introduction-to-http-request-methods">Read it</a>
+        </div>
+
+      </li>
+    </div>
     <div class="container container-center project-ow">
       <li>
         <h2>Loving Java</h2>
