--- a/project.html
+++ b/project.html
@@ -30,12 +30,13 @@
       <li>
         <h2>Wrote 2 Blogs ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markFifteen</span>
         </h2>
-        <small>15th February, 2021</small>
-        <p>Wrote Blogs sbout Technology, Web Development, Programming concepts and lot more intresting stuffs.
+        <small>5th September, 2021</small>
+        <p>Wrote Blogs about Technology, Web Development, Programming concepts and lot more intresting stuffs
         </p>
-        <div style="display: flex; flex-direction: row; align-items:left; justify-content: left;
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
         ">
-          <a class="link primary-link" style="margin-right: 1rem;" href="./blogs.html" target="_blank">Check My
+          <a class="link primary-link" href="./blogs.html" target="_blank">Check My
             Blogs</a>
 
         </div>
