--- a/project.html
+++ b/project.html
@@ -227,11 +227,10 @@
       <li>
         <h2>Blogs ~ <span style="font-size: 16px; font-style: italic; color: #374151;">markFive</span></h2>
         <small>15th January, 2021</small>
-        <p>Adding Blogs to Portfolio | TechStack used:
-          <strong style="color: var(--primary-colors);">HTML5 CSS3</strong>|
+        <p>Adding Blogs to Portfolio
         </p>
         <div style="margin: 2rem 0rem;">
-          <a class="link primary-link" href="./blogs.html" target="_blank">Read Now</a>
+          <a class="link primary-link" href="./blogs.html" target="_blank">Read Blogs</a>
         </div>
       </li>
     </div>
