--- a/OtherProjects.html
+++ b/OtherProjects.html
@@ -25,7 +25,46 @@
     <h1 class="hero-heading" style="padding-left: 2rem;">Other <span class="heading-inverted">Projects</span></h1>
   </div>
   </header>
-
+  <ul class="non-bullet">
+    <div class="container container-center project-w">
+      <li>
+        <h2>Simple Text Editor
+        </h2>
+        <small>28 August, 2021</small>
+        <p>A website where you can edit your inputed text
+          |TechStack :
+          <strong style="color: var(--primary-colors);">HTML5 CSS3 JS</strong>|
+        </p>
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
+        ">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://simple-text-editor-five.vercel.app/"
+            target="_blank">Edit Now</a>
+          <a class="link secondary-link" style="margin-left: 1rem;"
+            href="https://github.com/Aritra-art/Simple-Text-Editor" target="_blank">Github
+            Source Code</a>
+        </div>
+      </li>
+    </div>
+    <div class="container container-center project-ow">
+      <li>
+        <h2>SKYTOURS -- Your Personalized Holiday Manager.</h2>
+        <small>15th November, 2021</small>
+        <p>This is a tour booking Website, where the user can search about their favourite destinations and book for a
+          holiday. TechStack used:
+          <strong style="color: var(--primary-colors);">HTML5, CSS3 JavaScript</strong>
+        </p>
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://rajtour.netlify.app/#"
+            target="_blank">Visit us</a>
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/Skytours"
+            target="_blank">Github Source
+            Code</a>
+        </div>
+      </li>
+    </div>
+  </ul>
 
   <footer>
     <div class="footer">
