--- a/OtherProjects.html
+++ b/OtherProjects.html
@@ -64,6 +64,80 @@
         </div>
       </li>
     </div>
+    <div class="container container-center project-w">
+      <li>
+        <h2>Simple Calculator
+        </h2>
+        <small>28 August, 2021</small>
+        <p>A go to Calculator for your daily usage
+          |TechStack :
+          <strong style="color: var(--primary-colors);">HTML5 CSS3 JS</strong>|
+        </p>
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
+        ">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://go-to-calculator.netlify.app/"
+            target="_blank">Calculate Now</a>
+          <a class="link secondary-link" style="margin-left: 1rem;"
+            href="https://github.com/Aritra-art/A-Simple-Calculator" target="_blank">Github
+            Source Code</a>
+        </div>
+      </li>
+    </div>
+    <div class="container container-center project-ow">
+      <li>
+        <h2>Personalised Goal Tracker</h2>
+        <small>15th June, 2021</small>
+        <p>A Web-App where you can add and track all your daily goals. TechStack used:
+          <strong style="color: var(--primary-colors);">Reactjs CSS3</strong>
+        </p>
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://personal-goal-tracker.netlify.app/"
+            target="_blank">Add Goal</a>
+          <a class="link secondary-link" style="margin-left: 1rem;"
+            href="https://github.com/Aritra-art/Personal-Goal-Tracker" target="_blank">Github Source
+            Code</a>
+        </div>
+      </li>
+    </div>
+    <div class="container container-center project-w">
+      <li>
+        <h2>Leap Year Checker
+        </h2>
+        <small>28 August, 2021</small>
+        <p>A website which checks whether a year is leap year or not
+          |TechStack :
+          <strong style="color: var(--primary-colors);">HTML5 CSS3 JS</strong>|
+        </p>
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;
+        ">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://leap-year-byaritra.netlify.app/"
+            target="_blank">Check Now</a>
+          <a class="link secondary-link" style="margin-left: 1rem;"
+            href="https://github.com/Aritra-art/Leap-Year_Checker" target="_blank">Github
+            Source Code</a>
+        </div>
+      </li>
+    </div>
+    <div class="container container-center project-ow">
+      <li>
+        <h2>Prime Birthday</h2>
+        <small>29th August, 2021</small>
+        <p>A Web-App where you can add and track all your daily goals. TechStack used:
+          <strong style="color: var(--primary-colors);">HTML5 CSS3 JS</strong>
+        </p>
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://prime-birthday-byaritra.netlify.app/"
+            target="_blank">Check Birthday</a>
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/Prime-Birthday"
+            target="_blank">Github Source
+            Code</a>
+        </div>
+      </li>
+    </div>
   </ul>
 
   <footer>
