--- a/OtherProjects.html
+++ b/OtherProjects.html
@@ -138,7 +138,45 @@
         </div>
       </li>
     </div>
+    <div class="container container-center project-w">
+      <li>
+        <h2>QuizMania | Java Enthusiast</h2>
+        <small>28th December, 2021</small>
+        <p>This is a quiz based on Java Programming language. TechStack used:
+          <strong style="color: var(--primary-colors);">JavaScript</strong>
+        </p>
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;"><a class="link primary-link" style="margin-right: 1rem;"
+            href="https://replit.com/@AritraChowdhury/assignmentOne?embed=1&output=1" target="_blank">Play It
+            Now</a>
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/QuizMania"
+            target="_blank">Github Source
+            Code</a>
+        </div>
+      </li>
+    </div>
+    <div class="container container-center project-ow">
+      <li>
+        <h2>Personal Expense Manager</h2>
+        <small>29th July, 2021</small>
+        <p>A Web-App where you can add and track all your daily goals. TechStack used:
+          <strong style="color: var(--primary-colors);">ReactJS CSS3</strong>
+        </p>
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://expense-handler.netlify.app/"
+            target="_blank">Add Expense</a>
+          <a class="link secondary-link" style="margin-left: 1rem;"
+            href="https://github.com/Aritra-art/Personal-Expense-Manager" target="_blank">Github Source
+            Code</a>
+        </div>
+      </li>
+    </div>
   </ul>
+  <div style="display: flex;  align-items: center; justify-content: center;"> <a class="link secondary-link"
+      href="./project.html" target="_blank">Neog Camp
+      Projects</a>
+  </div>
 
   <footer>
     <div class="footer">
