--- a/readBlog.html
+++ b/readBlog.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/style.css">
-  <title>Read Blogs | AdarshBalak</title>
+  <title>Read Blogs | Aritra Chowdhury</title>
 </head>
+
 <body>
   <nav class="navigation container">
-  
-    <div class="nav-brand" >IAmDeveloper</div>
+
+    <div class="nav-brand">IAmDeveloper</div>
     <ul class="non-bullet nav-pills">
       <li class="list-item-inline"><a class="link " href="/">Home</a></li>
       <li class="list-item-inline"><a class="link " href="/project.html">Projects</a></li>
@@ -19,21 +21,24 @@
     </ul>
   </nav>
   <header>
-  <div class="container hero">
-    
-    <h1 class="hero-heading" style="padding-left: 2rem;">Blogs <span class="heading-inverted">Comming Soon</span></h1>
-  </div>
+    <div class="container hero">
+
+      <h1 class="hero-heading" style="padding-left: 2rem;">Blogs <span class="heading-inverted">Comming Soon</span></h1>
+    </div>
   </header>
   <footer style="padding-top: 25rem;">
     <div class="footer">
-        <p class="footer-header">Connect to me</p>
-        <ul class="non-bullet">
-          <li class="list-item-inline"><a class="link" href="https://github.com/Aritra-art">GitHub</a></li>
-          <li class="list-item-inline"><a class="link" href="https://www.facebook.com/aritra.chowdhury.549">Facebook</a></li>
-          <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/aritra-chowdhury-b95a66227/">Linkedin</a></li>
-          <li class="list-item-inline"><a class="link" href="https://t.me/Aritra_chowdhury">Telegram</a></li>
-        </ul>
-      </div>
-      </footer>
+      <p class="footer-header">Connect to me</p>
+      <ul class="non-bullet">
+        <li class="list-item-inline"><a class="link" href="https://github.com/Aritra-art">GitHub</a></li>
+        <li class="list-item-inline"><a class="link" href="https://www.facebook.com/aritra.chowdhury.549">Facebook</a>
+        </li>
+        <li class="list-item-inline"><a class="link"
+            href="https://www.linkedin.com/in/aritra-chowdhury-b95a66227/">Linkedin</a></li>
+        <li class="list-item-inline"><a class="link" href="https://t.me/Aritra_chowdhury">Telegram</a></li>
+      </ul>
+    </div>
+  </footer>
 </body>
+
 </html>
