--- a/OtherProjects.html
+++ b/OtherProjects.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/style.css">
-  <title>Other Projects | AdarshBalak</title>
+  <title>Other Projects | Aritra Chowdhury</title>
 </head>
 
 <body>
