--- a/blogs.html
+++ b/blogs.html
@@ -27,12 +27,27 @@
     </div>
   </header>
   <ul class="non-bullet">
+    <div class="container container-center project-ow">
+      <li>
+        <h2>Introduction to Events in JavaScript ~ <span
+            style="font-size: 16px; font-style: italic; color: #374151;">markFifteen</span></h2>
+        </h2>
+        <small>4th September, 2021</small>
+        <p>A blog which describes some common HTML events which are executed in JavaScript when written with HTML
+        </p>
+        <div style="padding-top: 2rem;">
+          <a class="link secondary-link"
+            href="https://aritra2001.hashnode.dev/introduction-to-events-in-javascript">Read it</a>
+        </div>
+
+      </li>
+    </div>
     <div class="container container-center project-w">
       <li>
         <h2>Introduction to HTTP Requests ~ <span
             style="font-size: 16px; font-style: italic; color: #374151;">markFifteen</span></h2>
         <small>2nd December, 2020</small>
-        <p>A blog very close to my Heart. It showcases my journey on falling love with a programming langiage java.
+        <p>A blog which showcases all the HTTP requests which takes palce between clients and Server.
         </p>
         <div style="padding-top: 2rem;">
           <a class="link secondary-link"
@@ -43,7 +58,9 @@
     </div>
     <div class="container container-center project-ow">
       <li>
-        <h2>Loving Java</h2>
+        <h2>Loving Java (Dummy Blog) ~ <span
+            style="font-size: 16px; font-style: italic; color: #374151;">markFive</span></h2>
+        </h2>
         <small>2nd December, 2020</small>
         <p>A blog very close to my Heart. It showcases my journey on falling love with a programming langiage java.
         </p>
@@ -55,7 +72,9 @@
     </div>
     <div class="container container-center project-w">
       <li>
-        <h2>Started Adobe Premiere Pro</h2>
+        <h2>Started Adobe Premiere Pro (Dummy Blog) ~ <span
+            style="font-size: 16px; font-style: italic; color: #374151;">markFive</span></h2>
+        </h2>
         <small>18th July, 2020</small>
         <p>A sudden urge within me to dive deep into video enditing, and then finally making it a hobby.
         </p>
