--- a/OtherProjects.html
+++ b/OtherProjects.html
@@ -26,6 +26,24 @@
   </div>
   </header>
   <ul class="non-bullet">
+    <div class="container container-center project-ow">
+      <li>
+        <h2>Weather -- Your Personalized Weather Manager.</h2>
+        <small>07 September, 2022</small>
+        <p>This a Weather web-app which showcases Temperature, Wind Speed, Humidity and many more interesting stuffs!!.
+          TechStack used:
+          <strong style="color: var(--primary-colors);">HTML5 CSS3 JavaScript ReactJS</strong>
+        </p>
+        <div style="display: flex; flex-direction: row; align-items: left; justify-content: left;
+        margin: 2rem 0rem;">
+          <a class="link primary-link" style="margin-right: 1rem;" href="https://weather-byaritra.netlify.app/"
+            target="_blank">Check Weather</a>
+          <a class="link secondary-link" style="margin-left: 1rem;" href="https://github.com/Aritra-art/Weather"
+            target="_blank">Github Source
+            Code</a>
+        </div>
+      </li>
+    </div>
     <div class="container container-center project-w">
       <li>
         <h2>Simple Text Editor
